serd (0.30.17) unstable; urgency=medium

  * Override pkg-config dependency within meson

 -- David Robillard <d@drobilla.net>  Fri, 07 Oct 2022 17:20:42 +0000

serd (0.30.16) stable; urgency=medium

  * Add SERD_STATIC to pkg-config Cflags for static-only builds
  * Adopt REUSE machine-readable licensing standard
  * Allow programs to be used from subproject
  * Fix spelling mistake in serdi man page

 -- David Robillard <d@drobilla.net>  Fri, 09 Sep 2022 03:06:45 +0000

serd (0.30.14) stable; urgency=medium

  * Fix memory consumption when reading documents
  * Switch to Meson build system
  * Update README and project metadata

 -- David Robillard <d@drobilla.net>  Sun, 10 Jul 2022 16:58:43 +0000

serd (0.30.12) stable; urgency=medium

  * Fix warnings and build issues with clang 13 and VS 2019
  * Fix writing long literals with triple quotes
  * Improve documentation style
  * Support combining several BSD-style command line flags in serdi
  * Write statements with invalid URI characters in lax mode

 -- David Robillard <d@drobilla.net>  Thu, 26 May 2022 22:47:35 +0000

serd (0.30.10) stable; urgency=medium

  * Add fallback configuration if documentation theme is unavailable
  * Fix SERD_DISABLE_DEPRECATED
  * Fix building for older MacOS versions on newer MacOS
  * Fix documentation installation directory

 -- David Robillard <d@drobilla.net>  Wed, 20 Jan 2021 15:55:35 +0000

serd (0.30.8) stable; urgency=medium

  * Deprecate serd_uri_to_path()
  * Don't install API man pages
  * Fix potential memory error when serialising URIs
  * Move headers to an include directory
  * Refuse to write relative URI references to NTriples
  * Remove the need for a generated configuration header
  * Remove use of C character class functions that may use locale
  * Split up and reorganize unit tests
  * Use aligned allocation via C11 or Windows API where possible

 -- David Robillard <d@drobilla.net>  Thu, 07 Jan 2021 21:19:36 +0000

serd (0.30.6) stable; urgency=medium
