@@ -27,6 +27,12 @@ if get_option('strict')
   endif
 endif
 
+###################
+# Header Warnings #
+###################
+
+subdir('headers')
+
 ##############
 # Unit Tests #
 ##############
