@@ -1,8 +1,9 @@
 serd (0.30.17) unstable; urgency=medium
 
   * Override pkg-config dependency within meson
+  * Test header for warnings more strictly
 
- -- David Robillard <d@drobilla.net>  Fri, 07 Oct 2022 17:20:42 +0000
+ -- David Robillard <d@drobilla.net>  Sat, 01 Oct 2022 16:24:20 +0000
 
 serd (0.30.16) stable; urgency=medium
 
